<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_wins"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/game_wins"
        android:textSize="21sp"/>

    <Button
        android:id="@+id/btn_next_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_next_question"
        android:textSize="17sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/placeholder_question"
        android:textSize="21sp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_status"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_option_a"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:padding="16dp"
                android:background="@drawable/btn_selector_round"
                android:text="@string/placeholder_option_a"
                android:textSize="19sp"/>

            <TextView
                android:id="@+id/tv_option_b"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:padding="16dp"
                android:background="@drawable/btn_selector_round"
                android:text="@string/placeholder_option_b"
                android:textSize="19sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_option_c"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:padding="16dp"
                android:background="@drawable/btn_selector_round"
                android:text="@string/placeholder_option_c"
                android:textSize="19sp"/>

            <TextView
                android:id="@+id/tv_option_d"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:padding="16dp"
                android:background="@drawable/btn_selector_round"
                android:text="@string/placeholder_option_d"
                android:textSize="19sp"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/placeholder_answer_final"
        android:textSize="19sp"/>

</RelativeLayout>